Actualizacion de colores fuente

--- a/src/sections/PrincipalDate.astro
+++ b/src/sections/PrincipalDate.astro
@@ -58,12 +58,12 @@ import AsistenciaModal from "@/components/AsistenciaModal.jsx";
             <li>
                 <p class="text-[28px] text-[#6F6F6E] font-medium">Día</p>
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
-                    Viernes 6 de Junio - 20:30hs
+                    Viernes 6 de Junio - 19:00hs
                 </span>
 
                 <a
                     data-id="TK21835117"
-                    href="https://www.addevent.com/event/TK21835117"
+                    href="https://www.addevent.com/event/YL25395285"
                     target="_blank"
                     class="bg-color01 text-color02 py-3 rounded-3xl"
                 >
@@ -122,11 +122,11 @@ import AsistenciaModal from "@/components/AsistenciaModal.jsx";
         @apply mx-auto;
     }
     a:hover {
-        background-color: rgb(195 128 11 / 73%);
-        @apply animate-pulsing;
-    }
-    button:hover {
-        background-color: rgb(195 128 11 / 73%);
-        @apply animate-pulsing;
-    }
+    background-color: rgba(162, 90, 44, 0.73); /* Un marrón cobrizo más oscuro */
+    @apply animate-pulsing;
+}
+button:hover {
+    background-color: rgba(162, 90, 44, 0.73); /* Mismo tono para coherencia */
+    @apply animate-pulsing;
+}
 </style>
