Agregando qr fotos

--- a/src/sections/Instagram.astro
+++ b/src/sections/Instagram.astro
@@ -14,16 +14,15 @@ import InstagramIcon from "@/icons/InstagramIcon.astro";
         >
             Comparte tus fotos y videos de este hermoso día
         </span>
-        <InstagramIcon class="w-16 mt-6" />
-        <p class="font-raleway text-4xl text-color03 desktop:text-6xl">
-            @jersylechuga
-        </p>
         <a
-            href="https://www.instagram.com/jersylechuga/"
-            class="bg-color01 mt-10 translate-x-2 transition max-w-40 min-w-40 text-center text-color02 py-3 rounded-3xl"
+            href="https://photos.google.com/share/AF1QipNCU9P5KmYExeN-ahValdbcgmC84yarH1bcPnVcqHMO91HvKWyT5uHoZsRS0ULC5w?key=bDB0S2NBamlEQkFYaEVnWGhsazlQWUlRUHdQV3FR"
             target="_blank"
         >
-            Ver en Instagram
+            <img 
+                src="/qrboda.svg" 
+                alt="QR para compartir fotos" 
+                class="w-40 phone:w-56 desktop:w-48 mt-6 mb-6 shadow-lg rounded-lg"
+            />
         </a>
     </div>
 </section>
@@ -31,7 +30,7 @@ import InstagramIcon from "@/icons/InstagramIcon.astro";
 <style>
  
     a:hover {
-        background-color: rgb(195 128 11 / 73%);
+        background-color:  rgba(255, 255, 255, 0.73);
         @apply animate-pulsing;
     }
 </style>
