--- a/src/sections/PrincipalDate.astro
+++ b/src/sections/PrincipalDate.astro
@@ -31,11 +31,6 @@ import AsistenciaModal from "@/components/AsistenciaModal.jsx";
                 <span class="text-[20px] font-normal text-[#C6C6C5]">
                     Sede Comunal 12 
                 </span>
-                <!--
-                <button class="bg-color01 text-color02 py-3 rounded-3xl">
-                    Confirmar asistencia
-                </button>
-                 -->
                 <AsistenciaModal type={"ceremonia"} client:load />
             </li>
             <li>
@@ -122,11 +117,11 @@ import AsistenciaModal from "@/components/AsistenciaModal.jsx";
         @apply mx-auto;
     }
     a:hover {
-    background-color: rgba(162, 90, 44, 0.73); /* Un marrón cobrizo más oscuro */
+    background-color: rgba(162, 90, 44, 0.73); 
     @apply animate-pulsing;
 }
 button:hover {
-    background-color: rgba(162, 90, 44, 0.73); /* Mismo tono para coherencia */
+    background-color: rgba(162, 90, 44, 0.73); 
     @apply animate-pulsing;
 }
 </style>
