Agregando click qr

--- a/src/sections/Instagram.astro
+++ b/src/sections/Instagram.astro
@@ -17,11 +17,17 @@ import InstagramIcon from "@/icons/InstagramIcon.astro";
         <a
             href="https://photos.google.com/share/AF1QipNCU9P5KmYExeN-ahValdbcgmC84yarH1bcPnVcqHMO91HvKWyT5uHoZsRS0ULC5w?key=bDB0S2NBamlEQkFYaEVnWGhsazlQWUlRUHdQV3FR"
             target="_blank"
+            class="relative inline-block"
         >
             <img 
                 src="/qrboda.svg" 
                 alt="QR para compartir fotos" 
                 class="w-40 phone:w-56 desktop:w-48 mt-6 mb-6 shadow-lg rounded-lg"
+            />
+            <img 
+                src="/click.png" 
+                alt="Haz click" 
+                class="absolute bottom-2 right-2 w-6 opacity-80 hover:opacity-100 transition"
             />
         </a>
     </div>
